Fixed width and alignment styles for email form

--- a/homepage.css
+++ b/homepage.css
@@ -20,12 +20,18 @@ body {
   }
   
   form {
+    text-align: left;
     background: #1b331b;
-    padding: 20px;
+    padding: 20px 30px;
     border-radius: 10px;
-    box-shadow: 0px 5px 15px rgba(0, 255, 0, 0.1);
+    box-shadow: 0px 0px 15px rgba(0, 255, 0, 0.4);
     max-width: 600px;
     margin: 20px auto;
+    transition: 0.3s transform;
+  }
+
+  form:hover{
+    transform: scale(1.2);
   }
   
   form h4 {
@@ -43,10 +49,10 @@ body {
   
   form label {
     color: #ffffff;
+    display: block;
   }
   
   form input, form textarea {
-    width: 100%;
     padding: 10px;
     border-radius: 5px;
     border: 1px solid #1b331b;
